# wavefront-simulation

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  WavefrontConfig.cmake  cmake_install.cmake
_codeql_build_dir/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  wavefront_tests
build-prof/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build-prof/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmon.out
build_cov/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  coverage.txt
build_cov/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: Dependencies.cmake  WavefrontConfig.cmake.in
docs/: API_REFERENCE.md  MATHEMATICAL_DERIVATIONS.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_REPORT.md  VALIDATION_REPORT.md  tutorial_mode_switching.md  tutorial_nd_setup.md  tutorial_precision_reference.md  tutorial_results_and_monitors.md
docs/assets/_checks/: validation-metrics.json
examples/: generate_readme_gifs.py
include/wavefront/api/: problem_validation.hpp  solver.hpp
include/wavefront/core/: field.hpp  grid.hpp  solver_nd.hpp  threading.hpp
include/wavefront/exact/: exact_number.hpp
include/wavefront/material/: library.hpp
include/wavefront/optimization/: sweep.hpp
include/wavefront/physics/: boundary.hpp  interface.hpp
include/wavefront/symbolic/: expression.hpp
include/wavefront/utils/: plotting.hpp
python/: CMakeLists.txt  bindings.cpp
python/wavefront/: __init__.py  helpers.py  plotting.py
src/api/: problem_validation.cpp  solver_factory.cpp
src/core/: runtime_solver.cpp  runtime_solver.hpp
src/exact/: exact_number.cpp
src/physics/: boundary.cpp  interface.cpp
src/symbolic/: expression.cpp
tests/: CMakeLists.txt  test_common.hpp
tests/benchmarks/: performance_test_utils.hpp  test_famous_experiments.cpp  test_performance_regression.cpp  test_published_cases.cpp  test_quantum_cases.cpp  test_real_world_wave_data.cpp
tests/integration/: test_mode_parity.cpp
tests/unit/: test_barriers.cpp  test_boundary_interface.cpp  test_coverage_gaps.cpp  test_dimensions.cpp  test_exact_number.cpp  test_expression_coverage.cpp  test_extended_api.cpp  test_factory.cpp  test_longitudinal.cpp  test_parser.cpp  test_utilities.cpp  test_validation.cpp
tests/verification/: test_boundary_conditions.cpp  test_convergence.cpp  test_invariants.cpp  test_longitudinal_validity.cpp  test_multi_object.cpp  test_physical_validity.cpp  test_reflection_refraction.cpp
